<resources>
    <string name="app_name">Tridatu Pedia</string>
    <string name="app_logo">App Logo</string>
    <string name="sign_in_account">Sign In Account</string>
    <string name="_4_5_7_3k_terjual">⭐ 4.5 | 7,3k Terjual</string>
    <string name="t_shirt">T-Shirt</string>
    <string name="rp_65_000">Rp 65.000</string>
    <string name="cari_produk">search</string>
    <string name="profile_image">image</string>
    <string name="profile_picture">profile</string>
    <string name="tshirt">tshirt</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="payment_success">Pembayaran Berhasil!</string>
    <string name="payment_success_message">Terima kasih telah melakukan pembayaran</string>
    <string name="payment_success_icon">Ikon Pembayaran Berhasil</string>
</resources>