<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@color/backround"
    android:padding="16dp">

    <!-- Success Icon -->
    <ImageView
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:src="@drawable/ic_success"
        android:contentDescription="@string/payment_success_icon"
        android:layout_marginBottom="16dp"/>

    <!-- Success Message -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/payment_success"
        android:textSize="20sp"
        android:textStyle="bold"
        android:gravity="center"
        android:textColor="@color/black"
        android:layout_marginBottom="8dp" />

    <!-- Subtext -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/payment_success_message"
        android:textSize="16sp"
        android:gravity="center"
        android:textColor="#000000" />
</LinearLayout>
